@@ -1,12 +1,1 @@
-{
-        "name": "health",
-        "blurb": "Flow to keep track of health metrics and medical details.",
-        "version": "202304091539",
-        "configPath": "/storage/emulated/0/Process/automate/3 Health/",
-        "writePath": "/storage/emulated/0/Data/health/metrics/sessions/",
-        "glossaryFile": "/storage/emulated/0/Data/health/metrics/glossary.json",
-        "primaryFile": "/storage/emulated/0/Data/health/metrics/primary.json",
-        "readingTimeout": 30,
-        "comment": "",
-        "uri": "content://com.llamalab.automate.provider/flows/11/data"
-}
+{"name":"health","blurb":"Flow to keep track of health metrics and medical details.","version":"202304092212","configPath":"/storage/emulated/0/Process/automate/3 Health/","writePath":"/storage/emulated/0/Data/health/metrics/sessions/","glossaryFile":"/storage/emulated/0/Data/health/metrics/glossary.json","primaryFile":"/storage/emulated/0/Data/health/metrics/primary.json","readingTimeout":30,"comment":"Fixed errant variable","uri":"content://com.llamalab.automate.provider/flows/11/data"}
